src/objects/collect__Interaction_Log__c.object
<CustomObject>
    <fields>
        <fullName>collect__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interaction Logs</relationshipLabel>
        <relationshipName>Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interaction Logs</relationshipLabel>
        <relationshipName>Interaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Contract_Name__c</fullName>
        <label>Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Interaction_Date__c</fullName>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Lease_Account_Id__c</fullName>
        <label>Lease Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Interaction Log</label>
    <nameField>
        <displayFormat>ILG-{00000000}</displayFormat>
        <label>Interaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>